--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!-- index.html (Updated with Financial Report, Descriptions & Income) -->
+<!-- index.html (Enhanced: PDF Download & Income) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Growth Hub - Financial Report</title>
-  <meta name="description" content="Growth Hub: Marketing strategies & comprehensive financial report tracker with detailed entries and income tracking.">
+  <meta name="description" content="Growth Hub: Marketing strategies & comprehensive financial report tracker with detailed entries, income tracking, and PDF export.">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+  <!-- html2canvas & jsPDF for PDF export -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
+  <!-- Your main script -->
   <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -29,7 +35,7 @@
   <main id="main-content" class="container" role="main">
     <section class="hero">
       <h1>Financial Report Dashboard</h1>
-      <p>Log and analyze your financial entries with descriptions for clarity.</p>
+      <p>Log and analyze your financial entries with descriptions, then export to CSV or PDF.</p>
     </section>
 
     <section id="budget-tracker" class="budget-tracker container">
@@ -43,22 +49,16 @@
           <option value="Investment">Investment</option>
           <option value="Debt">Debt</option>
         </select>
-        <div id="category-description" class="category-desc">
-          Select a category to see its definition.
-        </div>
-        <input
-          type="text"
-          id="item-desc"
-          placeholder="Description (e.g., Emergency Fund)"
-          required
-        >
+        <div id="category-description" class="category-desc">Select a category to see its definition.</div>
+        <input type="text" id="item-desc" placeholder="Description (e.g., Emergency Fund)" required>
         <input type="number" id="item-amount" placeholder="Amount" required>
         <button type="submit">Add Entry</button>
       </form>
 
       <div class="tracker-controls">
         <button id="clear-btn" type="button">Clear All</button>
-        <button id="download-btn" type="button">Download Report</button>
+        <button id="download-btn" type="button">Download CSV</button>
+        <button id="download-pdf-btn" type="button">Download PDF</button>
       </div>
 
       <div class="table-wrapper">
