--- a/strategy-email.html
+++ b/strategy-email.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email Marketing Guide | Growth Hub</title>
+  <title>Email Marketing Guide | YoungDesert</title>
   <meta name="description" content="Step-by-step Email Marketing strategy guide for startups. Build lists, craft campaigns, and download templates.">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -15,10 +15,10 @@
   <!-- Header + Nav -->
   <header class="site-header">
     <div class="container header-inner">
-      <a href="index.html" class="logo" aria-label="Growth Hub Home">Growth Hub</a>
+      <a href="strategy-email.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="index.html">Home</a>
+        <a href="main.html">Home</a>
         <a href="strategy-seo.html">SEO</a>
         <a href="strategy-email.html" class="active">Email</a>
         <a href="blog.html">Blog</a>
@@ -29,7 +29,7 @@
   <main class="container">
     <!-- Breadcrumb -->
     <nav aria-label="Breadcrumb" class="breadcrumb">
-      <a href="index.html">Home</a> &gt;
+      <a href="main.html">Home</a> &gt;
       <a href="#">Strategies</a> &gt;
       <span>Email Marketing Guide</span>
     </nav>
@@ -94,11 +94,44 @@
 
   <!-- Back to Top + Footer -->
   <button id="back-to-top" aria-label="Back to top">↑</button>
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 Growth Hub</p>
+<!-- Modern Footer -->
+<footer class="site-footer">
+  <div class="container footer-grid">
+    <div class="footer-brand">
+      <h2>Young<span>Desert</span></h2>
+      <p>Empowering startups with actionable marketing insights.</p>
     </div>
-  </footer>
+
+    <nav class="footer-nav">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="strategy-seo.html">SEO</a></li>
+        <li><a href="strategy-email.html">Email Marketing</a></li>
+      </ul>
+    </nav>
+
+    <div class="footer-social">
+      <h3>Follow Us</h3>
+      <a href="#" aria-label="Facebook">📘</a>
+      <a href="#" aria-label="Twitter">🐦</a>
+      <a href="#" aria-label="LinkedIn">🔗</a>
+    </div>
+
+    <div class="footer-newsletter">
+      <h3>Newsletter</h3>
+      <form id="newsletter-form">
+        <input type="email" placeholder="Email address" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 YoungDesert. All rights reserved.</p>
+  </div>
+</footer>
 
   <script src="js/script.js" defer></script>
 </body>
