--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="main.html" class="logo">Young<span>Desert</span></a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="main.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="Tools.html">Tools</a>
         <a href="training.html">Training</a>
         <a href="#resources">Resources</a>
