--- a/strategy-email.html
+++ b/strategy-email.html
@@ -18,7 +18,7 @@
       <a href="strategy-email.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="strategy-seo.html">SEO</a>
         <a href="strategy-email.html" class="active">Email</a>
         <a href="blog.html">Blog</a>
