--- a/training.html
+++ b/training.html
@@ -14,11 +14,11 @@
       <a href="training.html" class="logo">Young<span>Desert</span></a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="training.html" class="active">Training</a>
-        <a href="main.html#materials">Materials</a>
-        <a href="main.html#resources">Resources</a>
-        <a href="main.html#community">Community</a>
+        <a href="index.html#materials">Materials</a>
+        <a href="index.html#resources">Resources</a>
+        <a href="index.html#community">Community</a>
       </nav>
     </div>
   </header>
