--- a/Tools.html
+++ b/Tools.html
@@ -24,7 +24,7 @@
       <a href="Tracker.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav" role="navigation">
-        <a href="main.html" >Home</a>
+        <a href="index.html" >Home</a>
         <a href="Tools.html" class="active">Tools</a>
         <a href="strategy-seo.html">SEO</a>
         <a href="strategy-email.html">Email</a>
