--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a href="main.html" class="logo">Young<span>Desert</span></a>
+      <a href="index.html" class="logo">Young<span>Desert</span></a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
         <a href="index.html" class="active">Home</a>
