--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
       <a href="blog.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav" role="navigation">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="strategy-seo.html">SEO</a>
         <a href="strategy-email.html">Email</a>
         <a href="blog.html" class="active">Blog</a>
