--- a/strategy-email.html
+++ b/strategy-email.html
@@ -29,7 +29,7 @@
   <main class="container">
     <!-- Breadcrumb -->
     <nav aria-label="Breadcrumb" class="breadcrumb">
-      <a href="main.html">Home</a> &gt;
+      <a href="index.html">Home</a> &gt;
       <a href="#">Strategies</a> &gt;
       <span>Email Marketing Guide</span>
     </nav>
