--- a/Tools.html
+++ b/Tools.html
@@ -21,7 +21,7 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <a href="Tracker.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
+      <a href="Tools.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav" role="navigation">
         <a href="index.html" >Home</a>
