--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <li>Networking Events</li>
       <li>Mentorship Opportunities</li>
     </ul>
-    <a href="blog.html" class="btn">Join Now</a>
+    <a href="community.html" class="btn">Join Now</a>
   </section>
 
 
