--- a/community.html
+++ b/community.html
@@ -127,7 +127,7 @@
       </div>
       <div class="footer-nav">
         <ul>
-          <li><a href="main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="training.html">Training</a></li>
           <li><a href="resources.html">Resources</a></li>
           <li><a href="community.html">Community</a></li>
