--- a/community.html
+++ b/community.html
@@ -54,7 +54,7 @@
       <a href="index.html" class="logo">Young<span>Desert</span></a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="index.html">Tracker</a>
         <a href="training.html">Training</a>
         <a href="main.html#resources">Resources</a>
