--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
         <a href="index.html">Home</a>
-        <a href="index.html">Tracker</a>
+        <a href="tools.html">Tracker</a>
         <a href="training.html">Training</a>
         <a href="main.html#resources">Resources</a>
         <a href="community.html" class="active">Community</a>
