--- a/strategy-seo.html
+++ b/strategy-seo.html
@@ -18,7 +18,7 @@
       <a href="strategy-seo.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="index.html">Home</a>
+        <a href="main.html">Home</a>
         <a href="strategy-seo.html" class="active">SEO</a>
         <a href="strategy-email.html">Email</a>
         <a href="blog.html">Blog</a>
@@ -29,7 +29,7 @@
   <main class="container">
     <!-- Breadcrumb -->
     <nav aria-label="Breadcrumb" class="breadcrumb">
-      <a href="index.html">Home</a> &gt;
+      <a href="main.html">Home</a> &gt;
       <a href="#">Strategies</a> &gt;
       <span>SEO Guide</span>
     </nav>
@@ -41,19 +41,29 @@
     </section>
 
     <!-- Checklist & Download -->
-    <section class="guide-checklist">
-      <h2>Step-by-Step Checklist</h2>
-      <ul>
-        <li>Keyword research &amp; long-tail targeting</li>
-        <li>On-page optimization: titles, meta, headings</li>
-        <li>Content creation: pillar pages &amp; blog posts</li>
-        <li>Technical SEO: site speed, mobile-friendliness</li>
-        <li>Off-page SEO: quality backlinks &amp; outreach</li>
-      </ul>
-      <a href="templates/seo-checklist.xlsx" class="btn">Download SEO template</a>
-    </section>
+<section class="guide-checklist">
+  <h2>Step-by-Step Checklist</h2>
+  <ul>
+    <li>Define audience segments and goals</li>
+    <li>Select an email platform &amp; set up account</li>
+    <li>Create email templates (newsletter, promo, drip)</li>
+    <li>Design sign-up forms &amp; lead magnets</li>
+    <li>Plan cadence &amp; automation workflows</li>
+  </ul>
 
-    <!-- Details with collapsibles -->
+  <!-- Point customers to your Stripe-hosted link -->
+  <a
+    href="https://buy.stripe.com/test_4gM6oGclV8Ja6HxeREbZe08"
+    class="btn"
+    target="_blank"
+    rel="noopener"
+  >
+    Buy &amp; Download Email Template
+  </a>
+</section>
+
+
+    <!-- Details with collapsibles     Pay $X &amp;-->
     <section class="guide-details">
       <details open>
         <summary><h2>1. Keyword Research</h2></summary>
@@ -132,6 +142,8 @@
     <p>© 2025 YoungDesert. All rights reserved.</p>
   </div>
 </footer>
+
+
 
   <script src="js/script.js" defer></script>
 </body>
