--- a/success-seo.html
+++ b/success-seo.html
@@ -41,8 +41,43 @@
     </div>
   </section>
 
-  <footer class="footer">
+<!-- Modern Footer -->
+<footer class="site-footer">
+  <div class="container footer-grid">
+    <div class="footer-brand">
+      <h2>Young<span>Desert</span></h2>
+      <p>Empowering startups with actionable marketing insights.</p>
+    </div>
+
+    <nav class="footer-nav">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="strategy-seo.html">SEO</a></li>
+        <li><a href="strategy-email.html">Email Marketing</a></li>
+      </ul>
+    </nav>
+
+    <div class="footer-social">
+      <h3>Follow Us</h3>
+      <a href="#" aria-label="Facebook">📘</a>
+      <a href="#" aria-label="Twitter">🐦</a>
+      <a href="#" aria-label="LinkedIn">🔗</a>
+    </div>
+
+    <div class="footer-newsletter">
+      <h3>Newsletter</h3>
+      <form id="newsletter-form">
+        <input type="email" placeholder="Email address" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
     <p>© 2025 YoungDesert. All rights reserved.</p>
-  </footer>
+  </div>
+</footer>
 </body>
 </html>
