--- a/success-seo.html
+++ b/success-seo.html
@@ -37,7 +37,7 @@
     <div class="card">
       <h1>🎉 Thank You!</h1>
       <p>Your purchase was successful. Your SEO Strategy Guide is ready to download.</p>
-      <a href="templates/seo-checklist.xlsx" class="btn-primary" download="Startup-SEO-Strategy.pdf">Download Guide</a>
+      <a href="templates/Email-Marketing.pptx" class="btn-primary" download="Startup-SEO-Strategy.pdf">Download Guide</a>
     </div>
   </section>
 
