--- a/strategy-seo.html
+++ b/strategy-seo.html
@@ -18,7 +18,7 @@
       <a href="strategy-seo.html" class="logo" aria-label="Growth Hub Home">YoungDesert</a>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
       <nav class="site-nav">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="strategy-seo.html" class="active">SEO</a>
         <a href="strategy-email.html">Email</a>
         <a href="blog.html">Blog</a>
@@ -29,7 +29,7 @@
   <main class="container">
     <!-- Breadcrumb -->
     <nav aria-label="Breadcrumb" class="breadcrumb">
-      <a href="main.html">Home</a> &gt;
+      <a href="index.html">Home</a> &gt;
       <a href="#">Strategies</a> &gt;
       <span>SEO Guide</span>
     </nav>
