--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="#resources">Resources</a>
         <a href="blog.html">Blog</a>
         <a href="community.html">Community</a>
+         <a href="login.html">Login</a>
       </nav>
     </div>
   </header>
