--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a href="main.html" class="logo">YoungDesert</a>
+      <a href="index.html" class="logo">YoungDesert</a>
     </div>
   </header>
 
   <main class="container">
     <section class="hero">
-      <h1>Welcome Back</h1>
+      <h1>Welcome Young</h1>
       <p>Please log in to continue</p>
       <form id="login-form" style="max-width: 360px; margin: 2rem auto; display: grid; gap: 1rem;">
         <input type="email" name="email" placeholder="Email" required
