--- a/login.html
+++ b/login.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | YoungDesert</title>
-  <link rel="stylesheet" href="css/styles1.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login | YoungTrader Community</title>
+  <!-- global site styles -->
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- login-page overrides -->
+  <link rel="stylesheet" href="css/login.css">
 </head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a href="index.html" class="logo">YoungDesert</a>
-    </div>
-  </header>
+<body class="login-page">
 
-  <main class="container">
-    <section class="hero">
-      <h1>Welcome Young</h1>
-      <p>Please log in to continue</p>
-      <form id="login-form" style="max-width: 360px; margin: 2rem auto; display: grid; gap: 1rem;">
-        <input type="email" name="email" placeholder="Email" required
-               style="padding:0.75rem; border:1px solid #ddd; border-radius:var(--radius);" />
-        <input type="password" name="password" placeholder="Password" required
-               style="padding:0.75rem; border:1px solid #ddd; border-radius:var(--radius);" />
-        <button type="submit" class="btn btn-login">Log In</button>
+  <div class="login-container">
+    <!-- logo links back home -->
+    <a href="index.html" class="logo">YoungTrader</a>
 
-      </form>
-       <!--<p style="text-align:center; margin-top:1rem;">
- Don’t have an account? <a href="register.html">Register here</a> 
-</p> -->
+    <form id="login-form" class="login-form" novalidate>
+      <h2>Log In</h2>
 
-    </section>
-  </main>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          class="form-control"
+          placeholder="you@example.com"
+          required>
+        <small class="error-message"></small>
+      </div>
 
-  <!-- Auth logic -->
-  <script src="js/auth.js"></script>
+      <div class="form-group">
+        <label for="password">
+          Password
+          <button
+            type="button"
+            id="toggle-password"
+            class="toggle-password"
+            aria-label="Show password">👁️</button>
+        </label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          placeholder="••••••••"
+          required>
+        <small class="error-message"></small>
+      </div>
+
+      <button type="submit" class="btn btn-login">Log In</button>
+    </form>
+  </div>
+
+  <!-- global scripts (menu, etc.) -->
+  <script src="js/scripts.js"></script>
+  <!-- login-page logic -->
+  <script src="js/login.js"></script>
 </body>
 </html>
